[project]
name = "git-hunt"
version = "0.0.1"
dependencies = [
	"gitpython",
	"Pygments",
	"prompt-toolkit",
	"click~=8.1"
]

[project.optional-dependencies]
test = [
	"pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]

[project.scripts]
git-hunt = "git_hunt.cli:git_hunt"

[options.extras_require]
test = ["pytest"]
