[project]
name = "git-bbb"
version = "0.0.3"
dependencies = [
	"gitpython",
	"Pygments",
	"prompt-toolkit",
	"click~=8.1"
]

[project.optional-dependencies]
test = [
	"pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]

[project.scripts]
git-bbb = "git_bbb.cli:git_bbb"

[options.extras_require]
test = ["pytest"]
